--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
 
 .stats-container {
     display: flex;
+    background-color: #b16dc2;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0px 0px 30px lightblue;
 }
 
 .stats-card {
